Fixed makefile to compile sift

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,7 +11,7 @@ OTHERFLAGS=-std=gnu++0x
 OS=$(shell uname -o)
 
 ifeq ($(OS), Cygwin)
-SIFT=Sift.exe
+SIFT=sift.exe
 BUNDLER=bundler.exe
 KEYMATCHFULL=KeyMatchFull.exe
 KEYMATCHPART=KeyMatchPart.exe
@@ -19,7 +19,7 @@ BUNDLE2PMVS=Bundle2PMVS.exe
 BUNDLE2VIS=Bundle2Vis.exe
 RADIALUNDISTORT=RadialUndistort.exe
 else
-SIFT=Sift
+SIFT=sift
 BUNDLER=bundler
 KEYMATCHFULL=KeyMatchFull
 KEYMATCHPART=KeyMatchPart
@@ -66,7 +66,7 @@ endif
 
 CPPFLAGS=$(OPTFLAGS) $(OTHERFLAGS) $(INCLUDE_PATH)
 
-all: $(BUNDLER) $(KEYMATCHFULL) $(BUNDLE2PLY) $(BUNDLE2PMVS) $(BUNDLE2VIS) $(RADIALUNDISTORT) $(KEYMATCHPART)
+all: $(BUNDLER) $(KEYMATCHFULL) $(BUNDLE2PLY) $(BUNDLE2PMVS) $(BUNDLE2VIS) $(RADIALUNDISTORT) $(KEYMATCHPART) $(SIFT)
 
 %.o : %.cpp
 	$(CXX) -c -o $@ $(CPPFLAGS) $(WXFLAGS) $(BUNDLER_DEFINES) $<
